# s2let

./: .clang-format  .gitignore  .gitignore~  .pre-commit-config.yaml  CMakeLists.txt  CMakeListsNew.txt  COPYRIGHT.txt  MANIFEST.in  README.md  conanfile.py  conanfile.txt  makefile  makefile_c  makefile_general  makefile_original  makefile_pro  pom.xml  pyproject.toml  read_datafile.m  run_timing_error.py  s2let_demo9_N16_L16_B6_Jmin1_spin_curvelet_EarthTomo_fullres.fig  s2let_demo9_N16_L16_B6_Jmin1_spin_curvelet_EarthTomo_multires.fig  s2let_demo9_N32_L32_B6_Jmin1_spin_curvelet_EarthTomo_fullres.fig  s2let_demo9_N32_L32_B6_Jmin1_spin_curvelet_EarthTomo_multires.fig  s2let_timing_plots.py  setup.cfg  setup.py
.github/workflows/: cmake.yml  conan.yml  python.yml
cmake/: FindCFITSIO.cmake  FindFFTW3.cmake  FindSo3.cmake  FindSsht.cmake  S2letConfig.in.cmake  S2letConfigVersion.in.cmake  TestCFITSIOLibraryVersion.cc  conan_dependencies.cmake  conan_provider.cmake  exporting.cmake  fetch_cmocka.cmake  python-setup.cmake  sanitizers.cmake
data/: heal_galileo.fits  heal_grace.fits  heal_rnl.fits  heal_stpeters.fits  heal_uffizi.fits
data/LightProbe_ringmaps/: heal_galileo_ring.fits  heal_grace_ring.fits  heal_rnl_ring.fits  heal_stpeters_ring.fits  heal_uffizi_ring.fits
doc/c/: dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_2756d41f8717da58192571bd3d5ae320.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7420a7c8f71871d771403938d4d24c4a.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  s2let_8h.html  s2let_8h_source.html  s2let__about_8c.html  s2let__about_8c_source.html  s2let__axisym__hpx_8c.html  s2let__axisym__hpx_8c_source.html  s2let__axisym__hpx_8h.html  s2let__axisym__hpx_8h_source.html  s2let__axisym__hpx__analysis__real_8c.html  s2let__axisym__hpx__analysis__real_8c_source.html  s2let__axisym__hpx__synthesis__real_8c.html  s2let__axisym__hpx__synthesis__real_8c_source.html  s2let__axisym__lm_8c.html  s2let__axisym__lm_8c_source.html  s2let__axisym__lm_8h.html  s2let__axisym__lm_8h_source.html  s2let__axisym__mw_8c.html  s2let__axisym__mw_8c_source.html  s2let__axisym__mw_8h.html  s2let__axisym__mw_8h_source.html  s2let__axisym__mw__analysis__real_8c.html  s2let__axisym__mw__analysis__real_8c_source.html  s2let__axisym__mw__synthesis__real_8c.html  s2let__axisym__mw__synthesis__real_8c_source.html  s2let__denoising__demo_8c.html  (+39 more)
doc/matlab/: index.html  index_Curvelet.html
docs/: index.html
docs/c/: annotated.html  classes.html  dir_000002_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_000005_000000.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.map  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.md5  dir_2756d41f8717da58192571bd3d5ae320.html  dir_2756d41f8717da58192571bd3d5ae320_dep.map  dir_2756d41f8717da58192571bd3d5ae320_dep.md5  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_5eb159725f84c66aafd839904a4acdd0_dep.map  dir_5eb159725f84c66aafd839904a4acdd0_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7420a7c8f71871d771403938d4d24c4a.html  dir_7420a7c8f71871d771403938d4d24c4a_dep.map  dir_7420a7c8f71871d771403938d4d24c4a_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_f.html  globals_func_g.html  globals_func_h.html  globals_func_m.html  globals_func_n.html  globals_func_p.html  globals_func_r.html  globals_func_s.html  (+277 more)
docs/idl/: index.html
include/: s2let.h  s2let_alloc.h  s2let_analysis.h  s2let_analysis_adjoint.h  s2let_analysis_cur.h  s2let_axisym_denoising_demo.h  s2let_denoising_demo.h  s2let_error.h  s2let_fits.h  s2let_helper.h  s2let_hpx.h  s2let_idl_hpx.h  s2let_lm.h  s2let_math.h  s2let_mw.h  s2let_so3.h  s2let_synthesis.h  s2let_synthesis_adjoint.h  s2let_synthesis_cur.h  s2let_tiling.h  s2let_transform_axisym_lm.h  s2let_transform_axisym_mw.h  s2let_types.h
include/s2let/: s2let.h  s2let_alloc.h  s2let_analysis.h  s2let_analysis_adjoint.h  s2let_error.h  s2let_helper.h  s2let_idl_mw.h  s2let_so3.h  s2let_transform_axisym_hpx.h  s2let_version.in.h
lib/: .gitignore
src/: doxygen.config
src/c/: s2let_about.c  s2let_denoising_demo.c  s2let_idl_mw.c  s2let_spin_denoising_demo.c  s2let_synthesis_adjoint.c  s2let_transform_axisym_hpx.c  s2let_transform_axisym_lm.c
src/main/c/: .#s2let_analysis_adjoint.c  CMakeLists.txt  s2let_about.c  s2let_alloc.c  s2let_analysis.c  s2let_analysis_adjoint.c  s2let_analysis_cur.c  s2let_axisym_denoising_demo.c  s2let_denoising_demo.c  s2let_fits.c  s2let_helper.c  s2let_hpx.c  s2let_hpx_demo.c  s2let_idl_hpx.c  s2let_idl_mw.c  s2let_lm.c  s2let_math.c  s2let_mw.c  s2let_spin_denoising_demo.c  s2let_synthesis.c  s2let_synthesis_adjoint.c  s2let_synthesis_cur.c  s2let_tiling.c  s2let_transform_axisym_analysis_hpx_real.c  s2let_transform_axisym_analysis_mw_real.c  s2let_transform_axisym_hpx.c  s2let_transform_axisym_lm.c  s2let_transform_axisym_mw.c  s2let_transform_axisym_synthesis_hpx_real.c  s2let_transform_axisym_synthesis_mw_real.c
src/main/pys2let/: CMakeLists.txt  __init__.py  plots.py  pys2let.pyx  pys2let_plot_wavs.py
src/matlab/: #s2let_transform_axisym_analysis_mw_mex.c#  s2let_transform_analysis_adjoint_mw_mex.c  s2let_transform_analysis_mw.m  s2let_transform_axisym_analysis_adjoint_mw_mex.c  s2let_transform_axisym_synthesis_adjoint_mw.m  (+3 more)
src/pys2let/: CMakeLists.txt  __init__.py
src/test/c/: CMakeLists.txt  s2let_hpx_test.c  s2let_test.c  s2let_test.c~  s2let_test_csv.c  s2let_test_curvelet.c  test_adjoint.c  test_axisym_vs_directional.c  test_back_and_forth.c  test_tiling.c
test_package/: CMakeLists.txt  conanfile.py  conaninfo.txt  example.c
(+368 files in other folders)
