[build-system]
requires = [
    "setuptools", "wheel", "scikit-build", "cmake>=3.12", "ninja", "cython",
    "numpy", "conan<2"
]
[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.format]
max-line-length = 88
